@@ -1,3 +1,9 @@
+2003-04-03  Patrick Doyle  <wpd@delcomsys.com>
+
+	* include/var_cache.h (HAL_DCACHE_SYNC): Step through twice the
+	number of lines in order to ensure that dirty lines in the first
+	16Kbytes of memory are flushed.
+
 2003-02-26  Gary Thomas  <gary@mlbassoc.com>
 
 	* include/variant.inc: Get proper initialization for ROMRAM startup.
